# chess

./: .env.example  .gitignore  CONTRIBUTING.md  Create-Shortcut.ps1  Dockerfile  LICENSE  Launch ChessGuard.bat  Launch-ChessGuard.ps1  Makefile  README.md  compose.yaml  debug_imports.py  debug_output.txt  diagnose_fk.py  diagnose_startup.py  docker-compose.yml  error_log.txt  index.html  manage.py  pyproject.toml  requirements.txt  script.js  styles.css  test_analysis_simple.py  vercel.json  verify_agent_models.py
.vercel/: project.json
analysis/: kramnik_detected_engine_games.md
auth/: Dockerfile  app.py  config.py  database.py  main.py  models.py  requirements.txt  schemas.py  security.py
browser_extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
client/: Dockerfile  index.html  package-lock.json  package.json
configs/: local_debug.toml  training.toml
data/: README.md  cheater_analysis_results.json  cheater_windowed_analysis.json  known_cheaters.json  sniper_analysis_results.json
data_warehouse/: __init__.py  database.py  models.py
docs/: PRD.md  PRD_AutomatedCheatAgent.md  SECURITY_REVIEW.md  architecture.md  data_governance.md  data_strategy.md  observability_runbook.md  pilot_checklist.md  pilot_runbook.md  security_privacy.md  system_overview.md  testing.md
eval/: __init__.py  calibration.py  historical_replay.py  metrics.py  run_all.py
examples/: sample_game.pgn  sample_telemetry.json
frontend/: app.js  index.html  style.css  style_agent.css  style_social.css
integrations/: chesscom_webhook.py  lichess_webhook.py
models/: cheat_detector_20260116_225503.pkl  cheat_detector_20260117_000521.pkl  cheat_detector_20260117_001726.pkl  cheat_detector_20260117_004909.pkl
scripts/: analyze_db_game.py  analyze_pgn.py  assess_player.py  check_banned_status.py  check_db_url.py  compare_cohorts.py  debug_500.py  debug_db_users.py  debug_false_positive.py  detect_snipers.py  detect_windowed_cheating.py  dev_server.py  diagnose_models.py  discover_cheaters.py  extract_features.py  extract_new_subset.py  fetch_cheater_games.py  (+14 more)
(+177 files in other folders)
